@@ -59,3 +59,6 @@ Examples:
 
 # Add/Update a var, ensuring complete file in name=value format
   crudini --ini-options=nospace --set config_file section parameter value
+
+# Read indented ini file, like .gitconfig
+  crudini --ini-options=ignoreindent --format=lines --get ~/.gitconfig
