@@ -24,6 +24,7 @@ Multiple --set|--del|--get operations for a config_file can be specified.
                        Formats are 'sh','ini','lines'
   --ini-options=OPT  Set options for handling ini files.  Options are:
                        'nospace': use format name=value not name = value
+                       'ignoreindent': ignore leading whitespace
   --inplace          Lock and write files in place.
                        This is not atomic but has less restrictions
                        than the default replacement method.
@@ -98,6 +99,9 @@ Multiple --set|--del|--get operations for a config_file can be specified.
 
 # Add/Update a var, ensuring complete file in name=value format
   crudini --ini-options=nospace --set config_file section parameter value
+
+# Read indented ini file, like .gitconfig
+  crudini --ini-options=ignoreindent --format=lines --get ~/.gitconfig
 ```
 ## Installation
 
